force-app/main/default/objects/Implementation__c/Implementation__c.object-meta.xml
<CustomObject>
    <description>[i2PMS] Implementation(개발 관련 Task) 관리 Object</description>
    <label>Implementation</label>
    <nameField>
        <label>Implementation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Implementations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>