force-app/main/default/objects/Implementation__c/fields/ActualStart__c.field-meta.xml
<CustomField>
    <fullName>ActualStart__c</fullName>
    <label>Actual Start</label>
    <type>Date</type>
</CustomField>