force-app/main/default/objects/Implementation__c/fields/Cancel_Record__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Record__c</fullName>
    <label>Cancel Record</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own</fullName>
            </value>
            <value>
                <fullName>Upper</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>