force-app/main/default/objects/Implementation__c/fields/CategoryMain__c.field-meta.xml
<CustomField>
    <fullName>CategoryMain__c</fullName>
    <label>Category(Main)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category_Main</valueSetName>
    </valueSet>
</CustomField>