force-app/main/default/objects/Implementation__c/fields/CategorySub__c.field-meta.xml
<CustomField>
    <fullName>CategorySub__c</fullName>
    <label>Category(Sub)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>CategoryMain__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Category_Sub</valueSetName>
    </valueSet>
</CustomField>