force-app/main/default/objects/Implementation__c/fields/DataRange__c.field-meta.xml
<CustomField>
    <fullName>DataRange__c</fullName>
    <label>Data Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ALL</fullName>
                <label>ALL(exclude Completed, Canceled)</label>
            </value>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>On Going</fullName>
            </value>
            <value>
                <fullName>Delayed</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>