force-app/main/default/objects/Implementation__c/fields/DeployConfirm__c.field-meta.xml
<CustomField>
    <fullName>DeployConfirm__c</fullName>
    <label>Deploy Confirm</label>
    <type>Date</type>
</CustomField>