force-app/main/default/objects/Implementation__c/fields/DeployRequest__c.field-meta.xml
<CustomField>
    <fullName>DeployRequest__c</fullName>
    <label>Deploy Request</label>
    <type>Date</type>
</CustomField>