force-app/main/default/objects/Implementation__c/fields/Flow_Interview_Guid__c.field-meta.xml
<CustomField>
    <fullName>Flow_Interview_Guid__c</fullName>
    <label>Flow Interview Guid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>