force-app/main/default/objects/Implementation__c/fields/fm_Implementation__c.field-meta.xml
<CustomField>
    <fullName>fm_Implementation__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Id, fm_Emoji__c &amp; &apos; &apos; &amp;  Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation(L)</label>
    <type>Text</type>
</CustomField>