force-app/main/default/objects/Implementation__c/fields/fm_ImplementationOwnerEmail__c.field-meta.xml
<CustomField>
    <fullName>fm_ImplementationOwnerEmail__c</fullName>
    <description>Get Implementation Flow 에서 Flow 실행 사용자 가 과제 오너인 정보를 필터링 하기 위한 필드</description>
    <formula>ImplementationOwner__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner Email</label>
    <type>Text</type>
</CustomField>