force-app/main/default/objects/Implementation__c/fields/fm_ImplementationOwnerLink__c.field-meta.xml
<CustomField>
    <fullName>fm_ImplementationOwnerLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ ImplementationOwner__r.Id , ImplementationOwner__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Owner(L)</label>
    <type>Text</type>
</CustomField>