force-app/main/default/objects/Implementation__c/fields/fm_isActualStartInputed__c.field-meta.xml
<CustomField>
    <fullName>fm_isActualStartInputed__c</fullName>
    <formula>NOT ( ISBLANK (  ActualStart__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Actual Start Inputed</label>
    <type>Checkbox</type>
</CustomField>