force-app/main/default/objects/Implementation__c/fields/fm_isTaskOwner__c.field-meta.xml
<CustomField>
    <fullName>fm_isTaskOwner__c</fullName>
    <formula>ImplementationOwner__r.User__r.Id =  $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is Task Owner</label>
    <type>Checkbox</type>
</CustomField>