force-app/main/default/objects/Implementation__c/fields/fm_MilestoneId__c.field-meta.xml
<CustomField>
    <fullName>fm_MilestoneId__c</fullName>
    <formula>CASESAFEID(Requirement__r.Milestone__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone</label>
    <type>Text</type>
</CustomField>