force-app/main/default/objects/Implementation__c/fields/fm_ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>fm_ProjectStatus__c</fullName>
    <formula>TEXT ( Requirement__r.Milestone__r.Project__r.Stage__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Stage</label>
    <type>Text</type>
</CustomField>