force-app/main/default/objects/Implementation__c/fields/fm_RequirementName__c.field-meta.xml
<CustomField>
    <fullName>fm_RequirementName__c</fullName>
    <formula>Requirement__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requirement Name</label>
    <type>Text</type>
</CustomField>