force-app/main/default/objects/Implementation__c/fields/fm_SubTitle__c.field-meta.xml
<CustomField>
    <fullName>fm_SubTitle__c</fullName>
    <description>Search Layout 2번째 표시를 위한 필드</description>
    <formula>ImplementationOwner__r.Name &amp; &apos; / &apos; &amp; TEXT ( PlanStart__c ) &amp; &apos;~&apos; &amp; TEXT (  PlanEnd__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Title</label>
    <type>Text</type>
</CustomField>