force-app/main/default/objects/Implementation__c/fields/fm_Timeline__c.field-meta.xml
<CustomField>
    <fullName>fm_Timeline__c</fullName>
    <formula>&apos;[Plan : &apos; &amp; fm_TimelinePlan__c &amp; &apos;] vs. &apos; &amp; &apos;[Actual : &apos; &amp; fm_TimelineAcutal__c  &amp;&apos;]&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Timeline</label>
    <type>Text</type>
</CustomField>