force-app/main/default/objects/Implementation__c/fields/i2maxDevIs_fm__c.field-meta.xml
<CustomField>
    <fullName>i2maxDevIs_fm__c</fullName>
    <formula>AND(ISPICKVAL(ImplementationOwner__r.Role__c, &apos;SFDCDeveloper&apos;), ImplementationOwner__r.User__r.CompanyName=&apos;i2max&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>i2maxDev</label>
    <type>Checkbox</type>
</CustomField>