force-app/main/default/objects/Implementation__c/fields/IF_Pass_Confirm__c.field-meta.xml
<CustomField>
    <fullName>IF_Pass_Confirm__c</fullName>
    <label>I/F Pass Confirm</label>
    <type>Date</type>
</CustomField>