force-app/main/default/objects/Implementation__c/fields/IF_Pass_Plan__c.field-meta.xml
<CustomField>
    <fullName>IF_Pass_Plan__c</fullName>
    <label>I/F Pass Plan</label>
    <type>Date</type>
</CustomField>