force-app/main/default/objects/Implementation__c/fields/IF_Term__c.field-meta.xml
<CustomField>
    <fullName>IF_Term__c</fullName>
    <label>I/F Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Real</fullName>
            </value>
            <value>
                <fullName>Near-Real</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>per 1H</fullName>
            </value>
            <value>
                <fullName>per 30M</fullName>
            </value>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>