force-app/main/default/objects/Implementation__c/fields/ImplementationOwner__c.field-meta.xml
<CustomField>
    <fullName>ImplementationOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Implementation Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Member__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Member__c.Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.Project_Temp__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Member__c</referenceTo>
    <relationshipName>Implementation</relationshipName>
    <type>Lookup</type>
</CustomField>