force-app/main/default/objects/Implementation__c/fields/isEndedTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>isEndedTaskPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Plan End Date 기준 종료되어야 할 Task 인지를 구분하기 위한 필드</description>
    <label>is Ended Task(Plan)</label>
    <type>Checkbox</type>
</CustomField>