force-app/main/default/objects/Implementation__c/fields/isStartedTaskPlan__c.field-meta.xml
<CustomField>
    <fullName>isStartedTaskPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Plan Start Date 기준 착수되어야 할 Task 인지를 구분하기 위한 필드</description>
    <label>is Started Task(Plan)</label>
    <type>Checkbox</type>
</CustomField>