force-app/main/default/objects/Implementation__c/fields/ParentCancelHolding__c.field-meta.xml
<CustomField>
    <fullName>ParentCancelHolding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>(X)ParentCancelHolding</label>
    <type>Checkbox</type>
</CustomField>