force-app/main/default/objects/Implementation__c/fields/Phase__c.field-meta.xml
<CustomField>
    <fullName>Phase__c</fullName>
    <label>Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>요구사항정의</fullName>
            </value>
            <value>
                <fullName>분석 및 설계</fullName>
            </value>
            <value>
                <fullName>개발</fullName>
            </value>
            <value>
                <fullName>테스트</fullName>
            </value>
            <value>
                <fullName>마이그레이션</fullName>
            </value>
            <value>
                <fullName>배포</fullName>
            </value>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>