force-app/main/default/objects/Implementation__c/fields/Progress__c.field-meta.xml
<CustomField>
    <fullName>Progress__c</fullName>
    <label>Progress</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>