force-app/main/default/objects/Implementation__c/fields/Project_Temp__c.field-meta.xml
<CustomField>
    <fullName>Project_Temp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner Lookup Filter에 활용하기 위한 필드</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Implementation</relationshipName>
    <type>Lookup</type>
</CustomField>