force-app/main/default/objects/Implementation__c/fields/Protocol_Target__c.field-meta.xml
<CustomField>
    <fullName>Protocol_Target__c</fullName>
    <label>Protocol(Target)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REST</fullName>
            </value>
            <value>
                <fullName>SOAP</fullName>
            </value>
            <value>
                <fullName>ETL(EDI)</fullName>
            </value>
            <value>
                <fullName>RFC</fullName>
            </value>
            <value>
                <fullName>DB2DB</fullName>
            </value>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>