force-app/main/default/objects/Implementation__c/fields/RelatedSource__c.field-meta.xml
<CustomField>
    <fullName>RelatedSource__c</fullName>
    <label>Related Source</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>