force-app/main/default/objects/Implementation__c/fields/Source_System__c.field-meta.xml
<CustomField>
    <fullName>Source_System__c</fullName>
    <label>Source System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SFDC</fullName>
            </value>
            <value>
                <fullName>GSCM</fullName>
            </value>
            <value>
                <fullName>NERP</fullName>
            </value>
            <value>
                <fullName>DIMS</fullName>
            </value>
            <value>
                <fullName>...</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>