force-app/main/default/objects/Implementation__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Delayed(Start)</fullName>
            </value>
            <value>
                <fullName>Delayed(End)</fullName>
            </value>
            <value>
                <fullName>Ready</fullName>
                <default>true</default>
                <label>Ready</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
                <isActive>false</isActive>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
                <isActive>false</isActive>
                <label>Canceled</label>
            </value>
            <value>
                <fullName>In Review</fullName>
                <isActive>false</isActive>
                <label>In Review</label>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
                <isActive>false</isActive>
                <label>Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>