force-app/main/default/objects/Implementation__c/fields/System_Owner_Source__c.field-meta.xml
<CustomField>
    <fullName>System_Owner_Source__c</fullName>
    <label>System Owner(Source)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>