force-app/main/default/objects/Implementation__c/fields/System_Owner_Target__c.field-meta.xml
<CustomField>
    <fullName>System_Owner_Target__c</fullName>
    <label>System Owner(Target)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>