force-app/main/default/objects/Implementation__c/fields/Table_Object_Source__c.field-meta.xml
<CustomField>
    <fullName>Table_Object_Source__c</fullName>
    <label>Table/Object(Source)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>