force-app/main/default/objects/Implementation__c/fields/Table_Object_Target__c.field-meta.xml
<CustomField>
    <fullName>Table_Object_Target__c</fullName>
    <label>Table/Object(Target)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>