force-app/main/default/objects/Implementation__c/fields/Upper_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Upper_Canceled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upper Canceled</label>
    <type>Checkbox</type>
</CustomField>