force-app/main/default/objects/Implementation__c/recordTypes/AnalysisDesignTestetc.recordType-meta.xml
<RecordType>
    <fullName>AnalysisDesignTestetc</fullName>
    <active>true</active>
    <label>Analysis/Design/Test/etc</label>
</RecordType>