force-app/main/default/objects/Implementation__c/recordTypes/Configuration.recordType-meta.xml
<RecordType>
    <fullName>Configuration</fullName>
    <active>true</active>
    <label>Configuration</label>
</RecordType>