force-app/main/default/objects/Implementation__c/recordTypes/Development.recordType-meta.xml
<RecordType>
    <fullName>Development</fullName>
    <active>true</active>
    <label>Development</label>
</RecordType>