force-app/main/default/objects/Implementation__c/recordTypes/IF.recordType-meta.xml
<RecordType>
    <fullName>IF</fullName>
    <active>true</active>
    <label>I/F</label>
</RecordType>