force-app/main/default/objects/Implementation__c/validationRules/Actual_Date_Future_Date_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Date_Future_Date_Check</fullName>
    <active>true</active>
    <errorConditionFormula>( NOT ( ISBLANK ( ActualStart__c )) &amp;&amp; ActualStart__c &gt; TODAY() ) ||
	( NOT ( ISBLANK ( ActualEnd__c )) &amp;&amp; ActualEnd__c &gt; TODAY() )</errorConditionFormula>
    <errorMessage>Actual Date 는 미래일을 지정할 수 없습니다.</errorMessage>
</ValidationRule>