force-app/main/default/objects/Implementation__c/validationRules/Actual_Start_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Actual_Start_Validation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>( 
NOT ( ISBLANK ( ActualStart__c )) &amp;&amp; 
NOT ( ISBLANK ( ActualEnd__c )) &amp;&amp;
( ActualStart__c &gt; ActualEnd__c )
)</errorConditionFormula>
    <errorMessage>착수일이 완료일 보다 미래일이 지정되었습니다.</errorMessage>
</ValidationRule>