force-app/main/default/objects/Implementation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>fm_Implementation__c</columns>
    <columns>fm_Timeline__c</columns>
    <columns>fm_ImplementationOwnerLink__c</columns>
    <columns>ActualStart__c</columns>
    <columns>Stage__c</columns>
    <columns>CategoryMain__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Progress__c</columns>
    <columns>Flow_Interview_Guid__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Project_Temp__c</field>
        <operation>equals</operation>
        <value>LK보험중개 글로벌 계약관리 시스템 구축(4월)</value>
    </filters>
    <label>All</label>
</ListView>