force-app/main/default/objects/Implementation__c/listViews/Copy_of.listView-meta.xml
<ListView>
    <fullName>Copy_of</fullName>
    <columns>Project_Temp__c</columns>
    <columns>fm_Implementation__c</columns>
    <columns>fm_Timeline__c</columns>
    <columns>fm_ImplementationOwnerLink__c</columns>
    <columns>ActualStart__c</columns>
    <columns>Stage__c</columns>
    <columns>CategoryMain__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Progress__c</columns>
    <columns>Flow_Interview_Guid__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImplementationOwner__c</field>
        <operation>contains</operation>
        <value>이정훈</value>
    </filters>
    <filters>
        <field>Task_Cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>i2max_이정훈</label>
</ListView>