force-app/main/default/objects/Implementation__c/listViews/Copy_of_i2max.listView-meta.xml
<ListView>
    <fullName>Copy_of_i2max</fullName>
    <columns>Project_Temp__c</columns>
    <columns>fm_Implementation__c</columns>
    <columns>fm_Timeline__c</columns>
    <columns>Stage__c</columns>
    <columns>PlanStart__c</columns>
    <columns>PlanEnd__c</columns>
    <columns>ActualStart__c</columns>
    <columns>ActualEnd__c</columns>
    <columns>Progress__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImplementationOwner__c</field>
        <operation>contains</operation>
        <value>장혜민</value>
    </filters>
    <filters>
        <field>Task_Cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>i2max_장혜민</label>
</ListView>