force-app/main/default/objects/Implementation__c/listViews/i2maxDev3.listView-meta.xml
<ListView>
    <fullName>i2maxDev3</fullName>
    <columns>fm_Implementation__c</columns>
    <columns>fm_Timeline__c</columns>
    <columns>Stage__c</columns>
    <columns>Progress__c</columns>
    <columns>PlanStart__c</columns>
    <columns>PlanEnd__c</columns>
    <columns>ActualStart__c</columns>
    <columns>ActualEnd__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ImplementationOwner__c</field>
        <operation>contains</operation>
        <value>이원주</value>
    </filters>
    <filters>
        <field>Task_Cancel__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>i2max_이원주</label>
</ListView>